--- a/htmlSample/sample.html
+++ b/htmlSample/sample.html
@@ -16,5 +16,12 @@
 			<dd>시에스</dd>
 		</dl>
 		<p id="select">아하</p>
+		<ul>
+			<li>1</li>
+			<li>2</li>
+			<li>3</li>
+		</ul>
+		<a href="https://www.naver.com" alt="네이버">네이버</a>
+		<a href="https://www.daun.net" alt="네이버">네이버</a>
 	</body>
 </html>
